Most components formatted

--- a/1-Circuit/Components/06-Outputs/2-Displays/HD44780.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/HD44780.md
@@ -1,12 +1,19 @@
+## Description:
+
 5x8 dot-matrix liquid crystal display based on Hitachi HD44780 LCD controller.
+
+---
+
+## Properties:
 
 Property: (default value)
 
-- Rows: (2 Rows)
+- **Rows:** (2 Rows)
    Number of rows of characters.
-
-- Columns: (16 Columns)
+<br>
+- **Columns:** (16 Columns)
    Number of characters per row.
 
+---
 
 #Component 
