--- a/1-Circuit/Components/06-Outputs/2-Displays/KS0108.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/KS0108.md
@@ -1,6 +1,16 @@
-KS0108 GLCD:
+## Description:
 
 128x64 dot-matrix liquid crystal graphic display based on KS0108 LCD driver.
 
+---
+
+## Properties:
+
+Property: (default value)
+
+- **CS Active Low:** (no)
+   CS line active LOw or High.
+
+---
 
 #Component 
