--- a/1-Circuit/Components/06-Outputs/2-Displays/SSD1306.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/SSD1306.md
@@ -1,15 +1,22 @@
-128x64 OLED monochrome graphic display.
+## Description:
+
+128x64 OLED monochrome graphic display based on SSD1306 controller with I2C interface.
+
+---
+
+## Properties:
 
 Property: (default value)
 
-- Color: (white)
+- **Color:** (white)
    Pixel color.
-
-- I2C Address: (62)
+<br>
+- **I2C Address:** (62)
    Device address.
-
-- I2C Frequency: (100 KHz)
+<br>
+- **I2C Frequency:** (100 KHz)
    It is better to be similar to I2C Master frequency, but not critical in most cases.
 
+---
 
 #Component 
