--- a/1-Circuit/Components/7-Micro/8-Sensors/DS1621.md
+++ b/1-Circuit/Components/7-Micro/8-Sensors/DS1621.md
@@ -1,3 +1,20 @@
+## Description:
+
+Temperature sensor with I2C interface.
+
+---
+
+## Properties:
+
+Property: (default value)
+
+- **Temperature:** (22.5 ºC)
+   Current temperature.
+<br>
+- **Temp. increment:** (0.5 ºC)
+   Temperature will increment by this value when + or - buttons are pushed.
+
+---
 
 
 #Component 
