--- a/1-Circuit/Components/7-Micro/8-Sensors/DS18B20.md
+++ b/1-Circuit/Components/7-Micro/8-Sensors/DS18B20.md
@@ -1,3 +1,22 @@
+## Description:
 
+Temperature sensor with One Wire interface.
+
+---
+
+## Properties:
+
+Property: (default value)
+
+- **ROM:** (random)
+   ROM address.
+<br>
+- **Temperature:** (22 ºC)
+   Current temperature.
+<br>
+- **Temp. increment:** (0.5 ºC)
+   Temperature will increment by this value when + or - buttons are pushed.
+
+---
 
 #Component 
