--- a/1-Circuit/Components/7-Micro/9-Peripherals/DS1307.md
+++ b/1-Circuit/Components/7-Micro/9-Peripherals/DS1307.md
@@ -1,3 +1,16 @@
-Serial I2C real time clock.
+## Description:
+
+Real time clock with I2C interface. 
+
+---
+
+## Properties:
+
+Property: (default value)
+
+- Set current time at start: (yes)
+   Start simulation at current time.
+
+---
 
 #Component 
