--- a/1-Circuit/Components/06-Outputs/2-Displays/AIP31068.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/AIP31068.md
@@ -1,18 +1,25 @@
+## Description:
+
 5x8 dot-matrix liquid crystal display based on AiP31068 LCD controller.
+
+---
+
+## Properties:
 
 Property: (default value)
 
-- Rows: (2 Rows)
+- **Rows:** (2 Rows)
    Number of rows of characters.
-
-- Columns: (16 Columns)
+<br>
+- **Columns:** (16 Columns)
    Number of characters per row.
-
-- I2C Address: (62)
+<br>
+- **I2C Address:** (62)
    Device address.
-
-- I2C Frequency: (100 KHz)
+<br>
+- **I2C Frequency:** (100 KHz)
    It is better to be similar to I2C Master frequency, but not critical in most cases.
 
+---
 
 #Component 
