--- a/1-Circuit/Components/06-Outputs/2-Displays/ILI9341.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/ILI9341.md
@@ -1,5 +1,6 @@
-240x320 color LCD display.
+## Description:
 
+240x320 color liquid crystal display based on ILI9341 TFT LCD controller with SPI interface.
 
-
+---
 #Component 
