--- a/1-Circuit/Components/06-Outputs/2-Displays/PCD8544.md
+++ b/1-Circuit/Components/06-Outputs/2-Displays/PCD8544.md
@@ -1,8 +1,9 @@
-PCD8544 Graphic LCD:
+## Description:
 
 48x84 pixels matrix LCD based on PCD8544 controller.
 
 The PCD8544 interfaces to microcontrollers through a serial bus interface.
 
+---
 
 #Component 
