--- a/1-Circuit/Components/7-Micro/8-Sensors/DHT22-11.md
+++ b/1-Circuit/Components/7-Micro/8-Sensors/DHT22-11.md
@@ -1,15 +1,22 @@
+## Description:
+
 Temperature and humidity sensor.
+
+---
+
+## Properties:
 
 Property: (default value)
 
-- Model: (HDT22)
+- **Model:** (HDT22)
    Choose model: HDT22 or HDT11.
-
-- Temp. increment: (0.5 ºC)
+<br>
+- **Temp. increment:** (0.5 ºC)
    Temperature will increment by this value when + or - buttons are pushed.
-
-- Humid. increment: (0.5 ºC)
+<br>
+- **Humid. increment:** (0.5 ºC)
    Humidity will increment by this value when + or - buttons are pushed.
 
+---
 
 #Component 
